--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==2.3.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
 et_xmlfile==2.0.0
@@ -6,6 +7,7 @@ idna==3.10
 numpy==2.2.6
 openpyxl==3.1.5
 pandas==2.2.3
+pycodestyle==2.13.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.3
